crates/oxc_react_compiler/tests/snapshots/escape-analysis-not-if-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/escape-analysis-not-if-test.js
---
function Component(props) {
	const x = [props.a];
	let y;
	if (x) {
		y = props.b;
	} else {
		y = props.c;
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
