crates/oxc_react_compiler/tests/snapshots/escape-analysis-not-switch-case.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/escape-analysis-not-switch-case.js
---
function Component(props) {
	const a = [props.a];
	let x = props.b;
	switch (props.c) {
		case a: {
			x = props.d;
		}
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
