crates/oxc_react_compiler/tests/snapshots/escape-analysis-not-switch-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/escape-analysis-not-switch-test.js
---
function Component(props) {
	const a = [props.a];
	let x = props.b;
	switch (a) {
		case true: {
			x = props.c;
		}
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
