crates/oxc_react_compiler/tests/snapshots/expression-with-assignment-dynamic.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/expression-with-assignment-dynamic.js
---
function f(y) {
	let x = y;
	return x + (x = 2) + 2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: f,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
