crates/oxc_react_compiler/tests/snapshots/expression-with-assignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/expression-with-assignment.js
---
function f() {
	return 5;
}
export const FIXTURE_ENTRYPOINT = {
	fn: f,
	params: [],
	isComponent: false
};
