crates/oxc_react_compiler/tests/snapshots/fast-refresh-refresh-on-const-changes-dev.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fast-refresh-refresh-on-const-changes-dev.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer" @enableResetCacheOnSourceFileChanges @validateExhaustiveMemoizationDependencies:false
import { useEffect, useMemo, useState } from "react";
import { ValidateMemoization } from "shared-runtime";
let pretendConst = 0;
function unsafeResetConst() {
	pretendConst = 0;
}
function unsafeUpdateConst() {
	pretendConst += 1;
}
function Component() {
	const $ = _c(2);
	useState(_temp);
	unsafeUpdateConst();
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [{ pretendConst }];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const value = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <ValidateMemoization inputs={[pretendConst]} output={value} />;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
function _temp() {
	unsafeResetConst();
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}],
	sequentialRenders: [{}, {}]
};
