crates/oxc_react_compiler/tests/snapshots/fast-refresh-reloading.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fast-refresh-reloading.js
---
import { c as _c } from "react/compiler-runtime";
// @enableResetCacheOnSourceFileChanges
import { useMemo, useState } from "react";
import { ValidateMemoization } from "shared-runtime";
function Component(props) {
	const $ = _c(7);
	const [state] = useState(0);
	const t0 = state * 2;
	let t1;
	if ($[0] !== t0) {
		t1 = [t0];
		$[0] = t0;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const doubled = t1;
	let t2;
	if ($[2] !== state) {
		t2 = [state];
		$[2] = state;
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	let t3;
	if ($[4] !== doubled || $[5] !== t2) {
		t3 = <ValidateMemoization inputs={t2} output={doubled} />;
		$[4] = doubled;
		$[5] = t2;
		$[6] = t3;
	} else {
		t3 = $[6];
	}
	return t3;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}],
	sequentialRenders: [{}, {}]
};
